--- a/SA-frame/SA-frame/src/app/classification/classification.component.html
+++ b/SA-frame/SA-frame/src/app/classification/classification.component.html
@@ -1,4 +1,9 @@
-ิ<body>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <p class="a">จัดหมวดหมู่</p>
+  </mat-toolbar-row>
+</mat-toolbar>
+
 <div class="body1">
   <ul>
     <h1>จัดหมวดหมู่</h1>
@@ -71,6 +76,3 @@
   <button mat-raised-button color="primary" (click)="update()">บันทึก</button>
   </ul>
 </div>
-</body>
-
-
