--- a/SA-frame/SA-frame/src/app/shopping/shopping.component.html
+++ b/SA-frame/SA-frame/src/app/shopping/shopping.component.html
@@ -1,32 +1,11 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <p class="a">เลือกสินค้า</p>
+  </mat-toolbar-row>
+</mat-toolbar>
 
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<mat-grid-list   cols="4" rowHeight="30rem"> 
+  <mat-grid-tile *ngFor="let item of items" >
+    <app-card></app-card>
+  </mat-grid-tile>
+</mat-grid-list>  
