--- a/SA-frame/SA-frame/src/app/shopping/shopping.component.html
+++ b/SA-frame/SA-frame/src/app/shopping/shopping.component.html
@@ -5,7 +5,11 @@
 </mat-toolbar>
 
 <mat-grid-list   cols="4" rowHeight="30rem"> 
-  <mat-grid-tile *ngFor="let item of items" >
+  <mat-grid-tile *ngFor="let item of items | paginate: { itemsPerPage: 8, currentPage: p }" >
     <app-card></app-card>
   </mat-grid-tile>
 </mat-grid-list>  
+
+<div class="navi">
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
