--- a/SA-frame/SA-frame/src/app/card/card.component.css
+++ b/SA-frame/SA-frame/src/app/card/card.component.css
@@ -2,7 +2,7 @@
   max-width: 250px;
 }
 
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+.img-card {
+  width: 250px;
+  height: 250px;
 }
